<resources>
    <string name="app_name">CINEMAPP</string>
    <string name="movie_info">電影資訊</string>
    <string name="movie_info_en">Movie Information</string>
    <string name="movie_listen">響聽電影</string>
    <string name="movie_listen_en">Listen Movies</string>
    
    <!-- Movie Info -->
    <string name="movie_name">電影名稱</string>
    <string name="movie_name_en">Movie Name</string>
    <string name="running_time">片長 : </string>
    <string name="release_date">上映日期 : </string>
    <string name="director">導演 : </string>
    <string name="actor">演員 : </string>
    <string name="movie_introduction">簡介 : </string>
    <string name="movie_photo">劇照</string>
    <string name="trailer">預告片</string>
    
    <!-- Festivl Info -->
    <string name="festival_name">展覽名稱</string>
    <string name="festival_date">展覽時間</string>
    
    <!-- Album Info -->
    <string name="song_number">  songs</string>
    <string name="comment_number">  影評</string>
    <string name="play_all">全部撥放</string>    
    <string name="album_no">00</string>    
    <string name="album_ch_name">中文名稱</string>    
    <string name="album_en_name">英文名稱</string>
    
    <!-- Comment Info -->    
    <string name="comment_owner">影評人</string>    
    <string name="comment_title">標題</string>
    
</resources>
