<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background" >    
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/background"
	    android:orientation="vertical" >
	    <RelativeLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="15dp"
	        android:paddingBottom="10dp"
	        android:background="@drawable/item_background_normal" >
	        <ImageView android:id="@+id/movie_poster"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:scaleType="fitCenter"
	            android:background="@drawable/post_background" />
	        <TextView android:id="@+id/movie_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/movie_poster"
	            android:layout_marginLeft="10dp"
	            android:layout_marginTop="6dp"
	            android:text="@string/movie_name"
	            android:textSize="20dp"
	            android:textColor="@color/black"/>
	        <TextView android:id="@+id/movie_runningtime"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_alignBottom="@+id/movie_name"
	            android:layout_marginBottom="3dp"
	            android:layout_marginRight="10dp"
	            android:text="@string/running_time"
	            android:textSize="15dp"
	            android:textColor="@color/black"/>
	        <ImageView android:id="@+id/movie_level"
	            android:layout_width="24dp"
	            android:layout_height="24dp"
	            android:layout_alignBottom="@+id/movie_name"
	            android:layout_toLeftOf="@+id/movie_runningtime"
	            android:layout_margin="1dp"
	            android:scaleType="fitCenter" />
	        <TextView android:id="@+id/movie_name_en"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/movie_name"
	            android:layout_marginLeft="10dp"
	            android:text="@string/movie_name_en"
	            android:textSize="13dp"
	            android:textColor="@color/black"/>
	        <TextView android:id="@+id/release_date"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/movie_name_en"
	            android:layout_marginLeft="10dp"
	            android:layout_marginTop="5dp"
	            android:text="@string/release_date"
	            android:textSize="18dp"
	            android:textColor="@color/black"/>
	        <TextView android:id="@+id/director"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/release_date"
	            android:layout_marginLeft="10dp"
	            android:layout_marginTop="2dp"
	            android:text="@string/director"
	            android:textSize="18dp"
	            android:textColor="@color/black"/>
	        <TextView android:id="@+id/actor"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/director"
	            android:layout_marginLeft="10dp"
	            android:layout_marginTop="2dp"
	            android:text="@string/actor"
	            android:textSize="18dp"
	            android:textColor="@color/black"/>
	        </RelativeLayout>
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
		    android:background="@color/background"
		    android:orientation="horizontal"
		    android:weightSum="1.0" >
	        <Button android:id="@+id/photo"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.5"
	            android:layout_marginRight="7dp"
	            android:paddingTop="10dp"
	            android:paddingLeft="10dp"
	            android:paddingRight="10dp"
	            android:paddingBottom="15dp"
	            android:background="@drawable/item_background"
	            android:text="@string/movie_photo"
	            android:textColor="@color/main_color_blue"
	            android:textSize="20dp" />       
	        <Button android:id="@+id/trailer"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.5"
	            android:layout_marginLeft="7dp"
	            android:paddingTop="10dp"
	            android:paddingLeft="10dp"
	            android:paddingRight="10dp"
	            android:paddingBottom="15dp"
	            android:background="@drawable/item_background"
	            android:text="@string/trailer"
	            android:textColor="@color/main_color_blue"
	            android:textSize="20dp"  />
	        </LinearLayout>
           </LinearLayout>
       </ScrollView>