<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
    android:background="@color/background" >
	<ImageView android:id="@+id/movie_poster"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="2dp"
        android:background="@color/white1"
        android:scaleType="fitCenter"
        android:src="@drawable/album_background" />
	<TextView android:id="@+id/movie_name" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_poster"
        android:layout_alignLeft="@+id/movie_poster"
        android:lines="1"
        android:textColor="@color/main_color_blue"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/movie_name" />
	<TextView android:id="@+id/song_number" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_name"
        android:layout_alignLeft="@+id/movie_poster"
        android:lines="1"
        android:textColor="@color/textcolor_grey"
        android:textSize="15dp"
        android:text="@string/song_number" />
	<TextView android:id="@+id/comment_number" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_below="@+id/song_number"
        android:layout_alignLeft="@+id/movie_poster"
        android:paddingBottom="5dp"
        android:lines="1"
        android:textColor="@color/textcolor_grey"
        android:textSize="15dp"
        android:text="@string/comment_number" />
</RelativeLayout>