<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:background="@drawable/item_background" >

	<TextView android:id="@+id/album_no"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_centerVertical="true"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="12dp"
        android:textSize="18dp"
	    android:text="@string/album_no"
	    android:textColor="@color/textcolor_grey" />
	<View android:id="@+id/view_line"
	    android:layout_width="2dp" 
        android:layout_height="58dp"
        android:layout_toRightOf="@+id/album_no"
        android:background="@color/main_color_blue"/>
	<LinearLayout
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="12dp"
        android:paddingBottom="4dp"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/poster"
        android:layout_toRightOf="@+id/view_line"
	    android:orientation="vertical" >
	    <TextView android:id="@+id/album_ch_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:layout_margin="1dp"
	        android:text="@string/album_ch_name"
            android:textSize="18dp"
	        android:textColor="@color/main_color_blue" />
	    <TextView android:id="@+id/album_en_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:layout_margin="1dp"
	        android:text="@string/album_en_name"
            android:textSize="14dp"
	        android:textColor="@color/textcolor_grey" />
	    </LinearLayout>
	<ImageView android:id="@+id/poster"
		android:layout_width="25dp" 
		android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="12dp"
		android:scaleType="fitCenter"
		android:src="@drawable/play_white" />
</RelativeLayout>